tests/neg/semantic_struct_as_value.baa
// EXPECT: لا يمكن استخدام الهيكل

هيكل نقطة {
    صحيح س.
}

صحيح الرئيسية() {
    هيكل نقطة ن.
    صحيح ص = ن.
    إرجع ٠.
}
